# xenblocks-airdrop

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  airdrop-failures.json  airdrop-log.json  bunfig.toml  create-test-token.js  eslint.config.js  index.js  package-lock.json  package.json  test-token-info.json  tsconfig.json  vitest.config.anchor.ts  vitest.config.ts
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish-docker.yml
docs/: on-chain-tracking-plan.md  postmortem-2026-03-03-duplicate-airdrop.md
docs/plans/: 2026-01-27-eth-only-pda-migration.md  2026-03-09-mint-proposal-script.md
prisma/: schema.prisma
programs/xenblocks-airdrop-tracker/: Cargo.toml
programs/xenblocks-airdrop-tracker/src/: lib.rs
programs/xnm-airdrop-tracker/: Cargo.toml
programs/xnm-airdrop-tracker/src/: lib.rs
scripts/: close-all-pdas.ts  initialize-state.ts  migrate-state.ts
src/: audit.ts  config.ts  index.ts  lookup.ts  metrics.ts  mint-proposal.ts  release-lock.ts  status.ts  update-authority.ts
src/airdrop/: delta.ts  executor.ts  types.ts
src/db/: client.ts  queries.ts
src/onchain/: client.ts  pda.ts  types.ts
src/solana/: connection.ts  transfer.ts
src/utils/: format.ts  logger.ts
tests/: config.test.ts  delta.test.ts  format.test.ts  lock.test.ts
tests/anchor/: lock.test.ts
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
webapp/: package.json  vite.config.ts
webapp/src/: main.tsx
(+49 files in other folders)
