[package]
name = "xenblocks-airdrop-tracker"
version = "0.1.0"
description = "On-chain airdrop tracking program for Xenblocks tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xenblocks_airdrop_tracker"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
indexmap = "=2.7.1"
