[package]
name = "xnm-airdrop-tracker"
version = "0.1.0"
description = "On-chain airdrop tracking program for XNM token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xnm_airdrop_tracker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
